WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124263
RenderTableSection: Cell structures don't need allocation padding.
https://bugs.webkit.org/show_bug.cgi?id=124263
Summary
RenderTableSection: Cell structures don't need allocation padding.
Andreas Kling
Reported
2013-11-12 22:59:18 PST
RenderTableSection: Cell structures don't need allocation padding.
Attachments
Patch
(1.46 KB, patch)
2013-11-12 23:12 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-11-12 23:12:28 PST
Created
attachment 216770
[details]
Patch
WebKit Commit Bot
Comment 2
2013-11-13 03:44:42 PST
Comment on
attachment 216770
[details]
Patch Clearing flags on attachment: 216770 Committed
r159186
: <
http://trac.webkit.org/changeset/159186
>
WebKit Commit Bot
Comment 3
2013-11-13 03:44:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug