RenderTableSection: Cell structures don't need allocation padding. <https://webkit.org/b/124263>

The row structure data gets shrunk-to-fit once we get to layout,
but per-row cell structures get no such luxury. Fortuntely we know
ahead of time how many cells a row needs to accomodate, so we can
just use Vector::resizeToFit() instead of Vector::grow().

1.25 MB progression on HTML5-8266 locally.

Reviewed by Antti Koivisto.


Canonical link: https://commits.webkit.org/142471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159186 268f45cc-cd09-0410-ab3c-d52691b4dbfc